--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.6.11",
     "vue-mq": "^1.0.1",
     "vue-router": "^3.3.2",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "websocket-extensions": "^0.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
